2005-11-18  Marc Singer  <elf@buici.com>

	* src/drivers/drv-nor-cfi.c: Added option to inhibit the NOR CFI
	buffered write code, for lnode80.
 
	* src/mach-lh7952x/Kconfig: Added lnode80, patch from Dave Anders.

2005-11-07  Marc Singer  <elf@buici.com>

	* Makefile: Rolling release for 79525 and for a fix to the
	emac79524 driver.

2005-10-08  Marc Singer  <elf@buici.com>

	* src/net/ethernet.c (arp_terminate): Added a check for ^C in the
	ARP termination function.

	* src/net/tftp.c (tftp_open): Reorganized the tftp open sequence
	in case ARP for the TFTP server has yet to be achieved.  This was
	a crash bug.
 
2005-10-07  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/Kconfig: Start of changes for the kev79525.

	* src/arch-arm/entry/apex.lds.S: Fixed the drv-mem probe code to
	be reliable and safe.

2005-09-30  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c: Slowed the timing down for the
	IOBARRIER.  Now, we're using the slowest timing because that's all
	that seems to work.
 
	* src/arch-arm/entry/sdramboot.c (sdramboot_report): Unified
	support for reporting when APEX is booted from SDRAM.  While only
	informational, this will help explain to new users the difference
	between booting from flash or SRAM and from SDRAM. 

2005-09-29  Marc Singer  <elf@buici.com>

	* src/apex/env.c: Updated autoboot cancellation message to be more
	correct.  Only ^C cancels now.

2005-09-28  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/Makefile: architecture and tune features.  This
	fixes a build problem with native compilers. 

	* src/arch-arm/Kconfig: New configuration features to select the
	right architecture.  Lack of this was the source of a nasty build
	error having to do with the fact that the default CPU type on ARM
	doesn't support the half-word load.

2005-09-27  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/apex.lds.S: Enlarged the stacks.  We were
	crashing from a stack overflow in the jffs2 decompression path.
