@@ -280,31 +280,3 @@ void __naked __section (.bootstrap) initialize_bootstrap (void)
   __asm volatile ("mov r0, #-1\t\n"
 		  "mov pc, %0" : : "r" (lr));
 }
-
-
-/* target_init
-
-   performs the rest of the hardware initialization that didn't have
-   to be performed during the bootstrap phase.
-
-*/
-
-#if 0
-static void target_init (void)
-{
-  unsigned long lr;
-  __asm volatile ("mov %0, lr" : "=r" (lr));
-  __asm volatile ("mov pc, %0" : : "r" (lr));
-}
-#endif
-
-static void target_release (void)
-{
-  /* Flash is enabled for the kernel */
-//  CPLD_FLASH |=  CPLD_FLASH_FL_VPEN;
-}
-
-static __service_0 struct service_d lh79520_target_service = {
-  //  .init    = target_init,
-  .release = target_release,
-};
